--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ CTI ww2 sites(corp7.modelssmith.com)/mycoactiveDR/Documents/Turkish/Audio/Sezgi-
 CTI ww2 sites(corp7.modelssmith.com)/mycoactiveDR/Documents/Turkish/Audio/Sezgi-Demosu-intuition-demo.WMA
 CTI ww2 sites(corp7.modelssmith.com)/mycoactiveDR/Documents/Turkish/Audio/Sorumluluk-Aldirmak_Accountability.mp3
 CTI ww2 sites(corp7.modelssmith.com)/mycoactiveDR/Documents/Turkish/Audio/01A_Hosgeldin.wav
+CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/corporate/
