--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,48 @@ CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/docs/res/flvs/w
 CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/docs/res/flvs/why_cti.mp4
 CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/docs/res/flvs/WIM-Changing-Business-a.flv
 CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/docs/res/flvs/WIM-Transforming-Lives.flv
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/entries
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/format
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getevents_debug.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getevents_old.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getevents_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/geteventsR_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getregions.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getsite_data.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/getsitedata_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_assisting_cal.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_cal_cache.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_cal_cache_2011.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_cal_cache_2011a.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_cal_cache_uk.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_calendar_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_exams.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_orsc_assisting_cal_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/make_orsc_calendar_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/mindful_report.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/portal_core_events.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/portal_events.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/prop-base/raw_curl.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getevents_debug.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getevents_old.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getevents_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/geteventsR_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/geteventsR1_yaml_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getregions.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getsite_data.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/getsitedata_yaml.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_assisting_cal.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_cal_cache.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_cal_cache_2011.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_cal_cache_2011a.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_cal_cache_uk.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_calendar_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_exams.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_orsc_assisting_cal_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/make_orsc_calendar_obsolete.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/mindful_report.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/old_crontab.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/portal_core_events.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/portal_events.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/raw_curl.svn-base
+CTI www.thecoaches.com (comp9.modelsmith.com)/ctiscripts/.svn/text-base/set_unsubscribes.svn-base
